remove unwanted styleSheet

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,10 +40,10 @@
     <!-- Bootstrap CSS -->
 
     <!-- Tabler Icon CSS -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="/admin-assets/plugins/tabler-icons/tabler-icons.min.css"
-    />
+    /> -->
 
     <!-- Main CSS -->
   </head>
