--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dreams Rent | Template</title>
+    <!-- <title>Dreams Rent</title> -->
     <!-- Favicon -->
     <link rel="shortcut icon" href="/user-assets/img/favicon.png" />
 
